# conference-run-sheets

./: .gitignore  README-SESSIONIZE-FIELDS.md  README.md  main.py  pyproject.toml  requirements.txt
core_utils/: create_run_sheets.py  get_input.py  image_helper.py  pybay_standard_theme.py  save_run_sheet_manager.py  save_run_sheets_excel.py  save_run_sheets_google_sheets.py
